add header, fonts, logo-name

--- a/index.html
+++ b/index.html
@@ -3,11 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
+    <title>PORTFOLIO</title>
   </head>
   <body>
     <body>
-      barev
+      <header>
+        <div class="nav">
+          <div class="logo">
+            <a href="#"><h3>GRIGORYAN</h3></a>
+          </div>
+          <div class="menu">
+            <ul class="menu-list">
+              <li class="menu-item">Home</li>
+              <li class="menu-item">About Us</li>
+              <select name="" id="dropdown-menu">
+                  <option value="">Other</option>
+                  <option value="Russian">Places of work</option>
+                  <option value="english">Certificates</option>
+                  <option value="english">Skills</option>
+                  <option value="english">Places of study</option>
+                  <option value="english">Download CV</option>
+              </select>
+              <li class="menu-item">Contact</li>
+              <select name="" id="lezu">
+                <option value="">ARM</option>
+                <option value="Russian">RUS</option>
+                <option value="english">ENG</option>
+              </select>
+            </ul>
+          </div>
+        </div>
+      </header>
     </body>
   </body>
 </html>
