back-image add, title, btn-hover add

--- a/index.html
+++ b/index.html
@@ -11,27 +11,33 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&family=Outfit:wght@200&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
     <title>PORTFOLIO</title>
   </head>
   <body>
-    <body>
+    <div class="body">
       <header>
         <div class="nav">
           <div class="logo">
-            <a href="#"><h3>GRIGORYAN</h3></a>
+            <a href="#"
+              ><h3 class="logo-title"><span></span>GRIGORYAN</h3></a
+            >
           </div>
           <div class="menu">
             <ul class="menu-list">
               <li class="menu-item">Home</li>
               <li class="menu-item">About Us</li>
               <select name="" id="dropdown-menu">
-                  <option value="">Other</option>
-                  <option value="Russian">Places of work</option>
-                  <option value="english">Certificates</option>
-                  <option value="english">Skills</option>
-                  <option value="english">Places of study</option>
-                  <option value="english">Download CV</option>
+                <option value="">Other</option>
+                <option value="Russian">Places of work</option>
+                <option value="english">Certificates</option>
+                <option value="english">Skills</option>
+                <option value="english">Places of study</option>
+                <option value="english">Download CV</option>
               </select>
               <li class="menu-item">Contact</li>
               <select name="" id="lezu">
@@ -43,6 +49,25 @@
           </div>
         </div>
       </header>
-    </body>
+      <section>
+        <div class="welcome">
+          <h1>
+            HELLO <br />
+            MEET MY PORTFOLIO
+          </h1>
+          <div class="btn-page">
+            <button class="scroll-page">
+              <img
+                style="width: 14px"
+                src="acsess/image/icons8-толстая-стрелка-вниз-24.png"
+                alt=""
+              />MORE
+            </button>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <script src="index.js"></script>
   </body>
 </html>
