add body-image, corection text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="menu">
             <ul class="menu-list">
               <li class="menu-item">Home</li>
-              <li class="menu-item">About Us</li>
+              <li class="menu-item">About Me</li>
               <select name="" id="dropdown-menu">
                 <option value="">Other</option>
                 <option value="Russian">Places of work</option>
@@ -57,16 +57,24 @@
           </h1>
           <div class="btn-page">
             <button class="scroll-page">
-              <img
-                style="width: 14px"
-                src="acsess/image/icons8-толстая-стрелка-вниз-24.png"
-                alt=""
-              />MORE
+             MORE
             </button>
           </div>
         </div>
       </section>
     </div>
+
+    <section>
+      <div class="abourt-me">
+        <div class="about-img">
+          <img src="acsess/image/about-me.jpg.png" alt="" />
+        </div>
+        <div class="about-title">
+          <h1>About Me</h1>
+          <p></p>
+        </div>
+      </div>
+    </section>
 
     <script src="index.js"></script>
   </body>
