Places of work, corection

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&family=Outfit:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Martel:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="index.css" />
     <title>PORTFOLIO</title>
   </head>
@@ -41,9 +49,9 @@
               </select>
               <li class="menu-item">Contact</li>
               <select name="" id="lezu">
-                <option value="">ARM</option>
+                <option value="ARM">ARM</option>
                 <option value="Russian">RUS</option>
-                <option value="english">ENG</option>
+                <option value="ENG">ENG</option>
               </select>
             </ul>
           </div>
@@ -56,9 +64,7 @@
             MEET MY PORTFOLIO
           </h1>
           <div class="btn-page">
-            <button class="scroll-page">
-             MORE
-            </button>
+            <button class="scroll-page">MORE</button>
           </div>
         </div>
       </section>
@@ -67,11 +73,42 @@
     <section>
       <div class="abourt-me">
         <div class="about-img">
-          <img src="acsess/image/about-me.jpg.png" alt="" />
+          <img src="acsess/image/about-me.jpg.png.jpg" alt="" />
         </div>
         <div class="about-title">
-          <h1>About Me</h1>
-          <p></p>
+          <h1>ABOUT ME</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
+            <br />
+            illum vitae neque cumque aut est quod provident sed repellendus<br />
+            voluptates ad autem excepturi ea ipsam ipsa, perspiciatis
+            molestiae<br />
+            praesentium facere? Lorem ipsum dolor sit amet consectetur<br />
+            adipisicing elit. Numquam temporibus et rerum, officiis quisquam
+            ut<br />
+            eos consequatur placeat quod unde accusantium ipsam sapiente<br />
+            laborum! Repellendus ut quae facilis repellat atque!<br />
+          </p>
+        </div>
+      </div>
+
+      <div class="work">
+        <div class="work-title">
+          <h1>Places of work</h1>
+        </div>
+        <div class="work-info">
+          <div class="baget">
+            <a href="#"> <img src="acsess/image/baget.jpg" alt="" /></a>
+            <h5>Baguette & Co</h5>
+            <h6>Barista</h6>
+            <hr />
+          </div>
+          <div class="smart">
+            <a href="#"><img src="acsess/image/smart.png" alt="" /></a>
+            <h5>Smart Production</h5>
+            <h6>Sales maneger</h6>
+            <hr />
+          </div>
         </div>
       </div>
     </section>
