--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
               <li class="menu-item">Home</li>
               <li class="menu-item">About Me</li>
               <select name="" id="dropdown-menu">
-                <option value="">Other</option>
-                <option value="Russian">Places of work</option>
-                <option value="english">Certificates</option>
-                <option value="english">Skills</option>
-                <option value="english">Places of study</option>
-                <option value="english">Download CV</option>
+                <option>Other</option>
+                <option>Places of work</option>
+                <option>Certificates</option>
+                <option>Project</option>
+                <option>Skills</option>
+                <option>Places of study</option>
+                <option>Download CV</option>
               </select>
               <li class="menu-item">Contact</li>
               <select name="" id="lezu">
