--- a/index.html
+++ b/index.html
@@ -99,17 +99,42 @@
         </div>
         <div class="work-info">
           <div class="baget">
-            <a href="#"> <img src="acsess/image/baget.jpg" alt="" /></a>
+            <a
+              target="_blank"
+              href="https://www.instagram.com/baguette_and_co_/"
+            >
+              <img class="baget-img" src="acsess/image/baget.jpg" alt=""
+            /></a>
             <h5>Baguette & Co</h5>
             <h6>Barista</h6>
             <hr />
           </div>
           <div class="smart">
-            <a href="#"><img src="acsess/image/smart.png" alt="" /></a>
+            <a
+              target="_blank"
+              href="https://www.instagram.com/smartproduction__llc/"
+              ><img class="smart-img" src="acsess/image/smart.png" alt=""
+            /></a>
             <h5>Smart Production</h5>
             <h6>Sales maneger</h6>
             <hr />
           </div>
+        </div>
+      </div>
+
+      <div class="certificate">
+        <h1>Certificate</h1>
+        <div class="certificate-item">
+          <img
+            class="certificate-img"
+            src="acsess/image/certifacte.jfif"
+            alt=""
+          />
+          <img
+            class="certificate-img"
+            src="acsess/image/certifacte2.jfif"
+            alt=""
+          />
         </div>
       </div>
     </section>
