add 'I OWN'-bajine, 4 language programming

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </section>
     </div>
 
-    <section>
+    <section id="glux">
       <div class="abourt-me">
         <div class="about-img">
           <img src="acsess/image/about-me.jpg.png.jpg" alt="" />
@@ -122,6 +122,56 @@
         </div>
       </div>
 
+      <div class="own">
+        <div class="own-title">
+          <h1>I own</h1>
+        </div>
+        <div class="own-info">
+          <div class="html">
+            <a
+              target="_blank"
+              href="https://www.instagram.com/baguette_and_co_/"
+            >
+              <img class="baget-img" src="acsess/image/html.png" alt=""
+            /></a>
+            <h5>HTML 5</h5>
+            <h6>progress: 90%</h6>
+            <hr />
+          </div>
+          <div class="css">
+            <a
+              target="_blank"
+              href="https://www.instagram.com/smartproduction__llc/"
+              ><img class="smart-img" src="acsess/image/Css.png" alt=""
+            /></a>
+            <h5>CSS 3</h5>
+            <h6>progress: 90%</h6>
+            <hr />
+          </div>
+          <div class="js">
+            <a
+              target="_blank"
+              href="https://www.instagram.com/smartproduction__llc/"
+              ><img class="smart-img" src="acsess/image/Js.png" alt=""
+            /></a>
+            <h5>JavaScript</h5>
+            <h6>progress: 20%</h6>
+            <hr />
+          </div>
+
+          <div class="react">
+            <a
+              target="_blank"
+              href="https://www.instagram.com/smartproduction__llc/"
+              ><img class="smart-img" src="acsess/image/react.png" alt=""
+            /></a>
+            <h5>React</h5>
+            <h6>progress: 5%</h6>
+            <hr />
+          </div>
+        </div>
+      </div>
+
       <div class="certificate">
         <h1>Certificate</h1>
         <div class="certificate-item">
@@ -135,6 +185,15 @@
             src="acsess/image/certifacte2.jfif"
             alt=""
           />
+        </div>
+      </div>
+
+      <div class="project">
+        <h1>Project</h1>
+        <div class="certificate-item">
+          <a href="https://arogrigoryan.github.io/burgers/"
+            ><img class="burgers" src="acsess/image/burgers-page.jpg" alt=""
+          /></a>
         </div>
       </div>
     </section>
