--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <div class="html">
             <a
               target="_blank"
-              href="https://www.instagram.com/baguette_and_co_/"
+              href="https://developer.mozilla.org/en-US/docs/Web/HTML"
             >
               <img class="baget-img" src="acsess/image/html.png" alt=""
             /></a>
@@ -141,7 +141,7 @@
           <div class="css">
             <a
               target="_blank"
-              href="https://www.instagram.com/smartproduction__llc/"
+              href="https://developer.mozilla.org/en-US/docs/Web/CSS"
               ><img class="smart-img" src="acsess/image/Css.png" alt=""
             /></a>
             <h5>CSS 3</h5>
@@ -149,9 +149,7 @@
             <hr />
           </div>
           <div class="js">
-            <a
-              target="_blank"
-              href="https://www.instagram.com/smartproduction__llc/"
+            <a target="_blank" href="https://js-documentation.netlify.app/"
               ><img class="smart-img" src="acsess/image/Js.png" alt=""
             /></a>
             <h5>JavaScript</h5>
@@ -160,9 +158,7 @@
           </div>
 
           <div class="react">
-            <a
-              target="_blank"
-              href="https://www.instagram.com/smartproduction__llc/"
+            <a target="_blank" href="https://react.dev/"
               ><img class="smart-img" src="acsess/image/react.png" alt=""
             /></a>
             <h5>React</h5>
