--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap"
       rel="stylesheet"
     />
+    <link rel="website icon" type="png" href="acsess/image/favicon.png">
+
     <link rel="stylesheet" href="index.css" />
-    <title>PORTFOLIO</title>
+    <title>GRIGORYAN</title>
   </head>
   <body>
     <div class="body">
@@ -166,6 +168,42 @@
             <hr />
           </div>
         </div>
+
+        <div class="own-info-2">
+          <div class="git">
+            <a target="_blank" href="https://git-scm.com/">
+              <img class="git-img" src="acsess/image/git.png" alt=""
+            /></a>
+            <h5>GIT</h5>
+            <h6>progress: 90%</h6>
+            <hr />
+          </div>
+          <div class="github">
+            <a target="_blank" href="https://github.com/"
+              ><img class="github-img" src="acsess/image/github.png" alt=""
+            /></a>
+            <h5>GitHub</h5>
+            <h6>progress: 90%</h6>
+            <hr />
+          </div>
+          <div class="figma">
+            <a target="_blank" href="https://www.figma.com"
+              ><img class="smart-img" src="acsess/image/figma.png" alt=""
+            /></a>
+            <h5>Figma</h5>
+            <h6>progress: 50%</h6>
+            <hr />
+          </div>
+
+          <div class="corel">
+            <a target="_blank" href="https://www.coreldraw.com/en/"
+              ><img class="smart-img" src="acsess/image/corel.png" alt=""
+            /></a>
+            <h5>CorelDraw</h5>
+            <h6>progress: 40%</h6>
+            <hr />
+          </div>
+        </div>
       </div>
 
       <div class="certificate">
@@ -187,7 +225,7 @@
       <div class="project">
         <h1>Project</h1>
         <div class="certificate-item">
-          <a href="https://arogrigoryan.github.io/burgers/"
+          <a target="_blank" href="https://arogrigoryan.github.io/burgers/"
             ><img class="burgers" src="acsess/image/burgers-page.jpg" alt=""
           /></a>
         </div>
