add footer, add download cv

--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
       href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap"
       rel="stylesheet"
     />
-    <link rel="website icon" type="png" href="acsess/image/favicon.png">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@1,200&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mukta:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="website icon" type="png" href="acsess/image/favicon.png" />
 
     <link rel="stylesheet" href="index.css" />
     <title>GRIGORYAN</title>
@@ -39,7 +47,7 @@
           </div>
           <div class="menu">
             <ul class="menu-list">
-              <li class="menu-item">Home</li>
+              <li class="menu-item">Home</li></a>
               <li class="menu-item">About Me</li>
               <select name="" id="dropdown-menu">
                 <option>Other</option>
@@ -230,7 +238,47 @@
           /></a>
         </div>
       </div>
+
+      <div class="down">
+        <h1>Download Document CV</h1>
+        <div class="down-icon">
+          <img src="download/save-icon.png" alt="" />
+          <img src="download/save-icon.png" alt="" />
+          <img src="download/save-icon.png" alt="" />
+        </div>
+        <div class="down-btn">
+          <a href="#" download=""
+            ><button class="btn-down arm">CV Armenian language</button></a
+          >
+          <a href="#" download=""
+            ><button class="btn-down rus">CV Russian language</button></a
+          >
+          <a href="#" download=""
+            ><button class="btn-down eng">CV English language</button></a
+          >
+        </div>
+      </div>
     </section>
+
+    <footer>
+      <div>
+        <h1>ARARAT GRIGORYAN</h1>
+        <h4>phone number:<span>+374-93-83-10-99</span></h4>
+        <h4>phone number:<span>+374-96-33-10-99</span></h4>
+        <h4>Gmail: <span>arogrigoryan0302@gmail.com</span></h4>
+      </div>
+      <div class="icon-contact">
+        <a target="_blank" href="https://www.facebook.com/me/"
+          ><img class="icon-style" src="acsess/image/facebook.png" alt=""
+        /></a>
+        <a target="_blank" href="https://www.instagram.com/ar_grigoryan._/"
+          ><img class="icon-style" src="acsess/image/instagram.png" alt=""
+        /></a>
+        <a target="_blank" href="https://github.com/araratgrigoryan"
+          ><img class="icon-style" src="acsess/image/github-contact.png" alt=""
+        /></a>
+      </div>
+    </footer>
 
     <script src="index.js"></script>
   </body>
