--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
               <li class="menu-item">
                 <a class="menu-item-scroll" data-target="contact">Contact</a>
               </li>
-              <select name="" id="lezu">
+              <!-- <select name="" id="lezu">
                 <option value="eng">ENG</option>
                 <option value="ru">RUS</option>
                 <option value="arm">ARM</option>
-              </select>
+              </select> -->
             </ul>
           </div>
         </div>
@@ -83,16 +83,17 @@
         <div class="about-title">
           <h1>ABOUT ME</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit
+            Hi, my name is Ararat. I am 17 years old, I have been working in a
             <br />
-            illum vitae neque cumque aut est quod provident sed repellendus<br />
-            voluptates ad autem excepturi ea ipsam ipsa, perspiciatis
-            molestiae<br />
-            praesentium facere? Lorem ipsum dolor sit amet consectetur<br />
-            adipisicing elit. Numquam temporibus et rerum, officiis quisquam
-            ut<br />
-            eos consequatur placeat quod unde accusantium ipsam sapiente<br />
-            laborum! Repellendus ut quae facilis repellat atque!<br />
+            French cafe since I was 16, first as a waiter, then as a
+            bartender,<br />
+            worked for more than a year, then changed my job and started working
+            <br />
+            in an IT company as a sales manager. I teach web programming, I know
+            <br />
+            web design graphic design video editing. I am responsible, I like to
+            <br />
+            work and learn to talk, my skills are a very positive person <br />
           </p>
         </div>
       </div>
@@ -128,7 +129,7 @@
 
       <div class="own" id="own">
         <div class="own-title">
-          <h1>I own</h1>
+          <h1>WORK EXPERIENCE</h1>
         </div>
         <div class="own-info">
           <div class="html">
@@ -238,16 +239,12 @@
         <div class="down-icon">
           <img src="download/save-icon.png" alt="" />
           <img src="download/save-icon.png" alt="" />
-          <img src="download/save-icon.png" alt="" />
         </div>
         <div class="down-btn">
-          <a href="#" download=""
+          <a href="download/Արարատ-Գրիգորյան-cv.pdf" download=""
             ><button class="btn-down arm">CV Armenian language</button></a
           >
-          <a href="#" download=""
-            ><button class="btn-down rus">CV Russian language</button></a
-          >
-          <a href="#" download=""
+          <a href="download/Ararat-Grigoryan-cv.pdf" download=""
             ><button class="btn-down eng">CV English language</button></a
           >
         </div>
