--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <h1>ARARAT GRIGORYAN</h1>
         <h4>phone number:<span>+374-93-83-10-99</span></h4>
         <h4>phone number:<span>+374-96-33-10-99</span></h4>
-        <h4>Gmail: <span>arogrigoryan0302@gmail.com</span></h4>
+        <h4>Gmail: <span>araratgrigroyan.w@gmail.com</span></h4>
       </div>
       <div class="icon-contact">
         <a target="_blank" href="https://www.facebook.com/me/"
