--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           >
         </div>
       </div>
-    </section>
+    </section>`
 
     <footer id="contact">
       <div>
@@ -272,6 +272,6 @@
     </footer>
 
     <script src="index.js"></script>
-    <script src="lang.js"></script>
+    <!-- <script src="lang.js"></script> -->
   </body>
 </html>
